--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -174,6 +174,35 @@
         </app-accommodation-card>
       </div>
 
+      <!-- Edit dialog -->
+      <app-edit-accommodation-dialog
+        *ngIf="isAgency() && selectedAccommodation() && showEditDialog"
+        [isOpen]="showEditDialog"
+        [value]="selectedAccommodation()!"
+        [mode]="'edit'"
+        (cancel)="showEditDialog = false"
+        (save)="onSaveAccommodation($event)">
+      </app-edit-accommodation-dialog>
+
+      <!-- Create dialog -->
+      <app-edit-accommodation-dialog
+        *ngIf="isAgency() && !selectedAccommodation() && showEditDialog"
+        [isOpen]="showEditDialog"
+        [mode]="'create'"
+        (cancel)="showEditDialog = false"
+        (save)="onSaveAccommodation($event)">
+      </app-edit-accommodation-dialog>
+
+      <!-- Delete confirmation -->
+      <app-confirm-delete-dialog
+        *ngIf="isAgency() && selectedAccommodation() && showDeleteDialog"
+        [isOpen]="showDeleteDialog"
+        [title]="'Delete Accommodation'"
+        [message]="'Are you sure you want to delete ' + (selectedAccommodation()?.titre || 'this accommodation') + '?'"
+        (cancel)="showDeleteDialog = false"
+        (confirm)="onConfirmDelete()">
+      </app-confirm-delete-dialog>
+
       <!-- Pagination -->
       <div class="pagination" *ngIf="totalPages() > 1">
         <button
